# wiki_parser

./: .env.example  Deaths_in_August_2023.html  ESSAY.md  README.md  main.py  pyproject.toml  run_daemon.py  wiki_info.json
parser/: config.py  exceptions.py  init_repository.py  parser.py  repository.py  send.py  typedefs.py  wiki.py
project/: config.py  daemon.py  exceptions.py  init_repository.py  logger_config.py  parser.py  repository.py  send.py  text_processing.py  typedefs.py
tests/: test_parser.py  test_send.py
