[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project"]


[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "radon>=6.0.1",
    "ruff>=0.14.9",
]


[tool.ruff]
# Установка длины строки
line-length = 120

# Исключение файлов и папок
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Целевая версия Python
target-version = "py314"

[tool.ruff.lint]
# Включение групп правил — https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "SIM", # lake8-simplify
]

# Игнорирование определенных правил
ignore = [
    "RUF001",  # кириллица вместо англ символов
    "RUF003",  # кириллица вместо англ символов
    "RUF002",
]

# Разрешение автоисправления для определенных правил
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Использование двойных кавычек
quote-style = "double"

# Отступы в 4 пробела (по умолчанию)
indent-style = "space"

# Сохранение магических запятых
skip-magic-trailing-comma = false
